fix migrations
